feat: implement REST-compliant API with comprehensive error handling